--- a/zeus/index.html
+++ b/zeus/index.html
@@ -20,8 +20,24 @@
         </div>
     </pageHead>
     <div class="w-full text-center">
-        <span class="material-symbols-outlined grad text-[16rem] [-webkit-text-fill-color:transparent]">airlines</span>
-        <h1 class=" block text-5xl mt-[-3rem] no-underline">Zeus</h1>
+        <div class="w-full flex justify-center">
+            <object class="w-48 pt-2" type="image/svg+xml" data="../assets/Vector.svg"></object>
+        </div>
+        <h1 class="w-full block text-6xl">Zeus</h1>
+    </div>
+    <spacer class="h-[2px] bg-gradient-to-r from-[#d81c8f] via-[#ffbd00] to-[#00a7ff] block mt-8"></spacer>
+    <div class="w-full flex justify-center">
+        <div class="m-4 w-full flex flex-col md:text-center">
+            <div class="md:hidden">
+                <h2>The</h2><h2 class="grad [-webkit-text-fill-color:transparent] pl-12 bg-gradient-to-tr from-[#299300] via-[#009274] to-[#0088BD] bg-g">all new</h2><h2 class="pl-24">flying experiece!</h2>
+            </div>
+            <div class="hidden md:block">
+                <h2>The <em class="grad [-webkit-text-fill-color:transparent]">all new</em> flying experiece!</h2>
+            </div>
+            <div class="flex justify-center w-full mt-8">
+                <img class="rounded-xl w-4/5" alt="" src="../assets/img.webp">
+            </div>
+        </div>
     </div>
     <spacer class="h-[2px] bg-gradient-to-r from-[#d81c8f] via-[#ffbd00] to-[#00a7ff] block mt-8"></spacer>
     <div class="m-4 w-[inherit] text-center">
