--- a/airguard/index.html
+++ b/airguard/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/build.css">
-    <title>Document</title>
+    <style>
+    </style>
+    <title>AIRGUARD AG</title>
 </head>
-<body>
+<body class="font-circle">
     <div class="flex justify-between bg-gradient-to-r from-teal-800 to-cyan-950 text-white">
         <div class="flex">
             <img class="ml-1" alt="logo" src="../assets/emergency.png">
@@ -19,14 +21,14 @@
         </div>
     </div>
     <div class="mt-4">
-        <h1 id="Produkte" class="text-center inline-block">Produkte</h1>
+        <h1 id="Produkte" class="text-center inline-block font-circleBold">Produkte</h1>
         <carrousel class="flex snap-x snap-mandatory overflow-x-auto mt-4">
             <card class="carrousel flex flex-col">
-                <h1 class="ml-1">AG-D1-rev1</h1>
+                <h1 class="ml-1 font-circleBold">AG-D1-rev1</h1>
                 <p class="ml-1">Günstig und effektiv.</p>
                 <img class="w-4/5 self-center" alt="" src="../assets/img.webp">
                 <span class="ml-1">
-                    <h3 class="no-underline">Stats</h3>
+                    <h3 class="no-underline font-circleBold">Stats</h3>
                     <ul>
                         <li>Reichweite: 3-5km</li>
                         <li>Flugdauer: 1-2.5h</li>
@@ -39,11 +41,11 @@
                 </div>
             </card>
             <card class="carrousel flex flex-col">
-                <h1 class="ml-1">AG-D1-rev2</h1>
+                <h1 class="ml-1 font-circleBold">AG-D1-rev2</h1>
                 <p class="ml-1">2. Revision des Bestsellers</p>
                 <img class="w-4/5 self-center" alt="" src="../assets/img.webp">
                 <span class="ml-1">
-                    <h3 class="no-underline">Stats</h3>
+                    <h3 class="no-underline font-circleBold">Stats</h3>
                     <ul>
                         <li>Reichweite: 5-7km</li>
                         <li>Flugdauer: 1-2.5h</li>
@@ -56,11 +58,11 @@
                 </div>
             </card>
             <card class="carrousel flex flex-col">
-                <h1 class="ml-1">AG-LD1</h1>
+                <h1 class="ml-1 font-circleBold">AG-LD1</h1>
                 <p class="ml-1">Lange Distanzen & starke Feuerkraft</p>
                 <img class="w-4/5 self-center" alt="" src="../assets/img.webp">
                 <span class="ml-1">
-                    <h3 class="no-underline">Stats</h3>
+                    <h3 class="no-underline font-circleBold">Stats</h3>
                     <ul>
                         <li>Reichweite: 30-45km</li>
                         <li>MTuC: 35</li>
@@ -77,11 +79,11 @@
     </div>
     <space class="inline-block my-4"></space>
     <div class="text-center m-2">
-        <h1 class="inline-block">Über uns</h1>
+        <h1 class="inline-block font-circleBold">Über uns</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo facilis tenetur qui id, aspernatur hic aperiam dolores neque vitae saepe voluptate! Excepturi, nesciunt. Praesentium amet illum necessitatibus recusandae. A, illum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, dolorum, aut fugit minus cupiditate officiis, rerum quibusdam eum accusantium fugiat aliquid pariatur quia sint facere eveniet! A nobis nihil voluptate!</p>
     </div>
     <div class="text-center">
-        <h1 class="inline-block">Abkürzungen</h1>
+        <h1 class="inline-block font-circleBold">Abkürzungen</h1>
         <ul>
             <li>RPM: Rounds per Minute</li>
             <li>RPC: Rounds per Cluster</li>
