--- a/airguard/index.html
+++ b/airguard/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="../assets/airguard.svg">
     <link rel="stylesheet" href="../styles/build.css">
     <style>
     </style>
@@ -11,13 +12,13 @@
 <body class="font-circle">
     <div class="flex justify-between bg-gradient-to-r from-teal-800 to-cyan-950 text-white">
         <div class="flex">
-            <img class="ml-1" alt="logo" src="../assets/emergency.png">
+            <img class="ml-1 h-8 p-1" alt="logo" src="../assets/airguard.svg">
             <span class="p-2">Airguard AG</span>
         </div>
         <div class="flex">
             <a class="p-2" href="#Produkte">Produkte</a>
-            <a class="ml-2 p-2" href="#">Karriere</a>
-            <a class="ml-2 p-2" href="#Über uns">Über uns</a>
+            <a class="p-2" href="karriere.html">Karriere</a>
+            <a class="p-2" href="#Über uns">Über uns</a>
         </div>
     </div>
     <div class="mt-4">
@@ -26,7 +27,7 @@
             <card class="carrousel flex flex-col">
                 <h1 class="ml-1 font-circleBold">AG-D1-rev1</h1>
                 <p class="ml-1">Günstig und effektiv.</p>
-                <img class="w-4/5 self-center" alt="" src="../assets/img.webp">
+                <img class="w-4/5 self-center" alt="" src="../assets/airguard.svg">
                 <span class="ml-1">
                     <h3 class="no-underline font-circleBold">Stats</h3>
                     <ul>
@@ -43,7 +44,7 @@
             <card class="carrousel flex flex-col">
                 <h1 class="ml-1 font-circleBold">AG-D1-rev2</h1>
                 <p class="ml-1">2. Revision des Bestsellers</p>
-                <img class="w-4/5 self-center" alt="" src="../assets/img.webp">
+                <img class="w-4/5 self-center" alt="" src="../assets/airguard.svg">
                 <span class="ml-1">
                     <h3 class="no-underline font-circleBold">Stats</h3>
                     <ul>
@@ -60,7 +61,7 @@
             <card class="carrousel flex flex-col">
                 <h1 class="ml-1 font-circleBold">AG-LD1</h1>
                 <p class="ml-1">Lange Distanzen & starke Feuerkraft</p>
-                <img class="w-4/5 self-center" alt="" src="../assets/img.webp">
+                <img class="w-4/5 self-center" alt="" src="../assets/airguard.svg">
                 <span class="ml-1">
                     <h3 class="no-underline font-circleBold">Stats</h3>
                     <ul>
@@ -79,7 +80,7 @@
     </div>
     <space class="inline-block my-4"></space>
     <div class="text-center m-2">
-        <h1 class="inline-block font-circleBold">Über uns</h1>
+        <h1 id="Über uns" class="inline-block font-circleBold">Über uns</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo facilis tenetur qui id, aspernatur hic aperiam dolores neque vitae saepe voluptate! Excepturi, nesciunt. Praesentium amet illum necessitatibus recusandae. A, illum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, dolorum, aut fugit minus cupiditate officiis, rerum quibusdam eum accusantium fugiat aliquid pariatur quia sint facere eveniet! A nobis nihil voluptate!</p>
     </div>
     <div class="text-center">
@@ -90,6 +91,9 @@
             <li>MTuC: max Targets under Control</li>
             <li>MTuA: max Targets under Attack</li>
         </ul>
+    </div>
+    <div class="m-2 mt-12">
+        <p class="text-center">Made with ❤️ in Kehl, Germany!</p>
     </div>
 </body>
 </html>
