--- a/bgmobile/index.html
+++ b/bgmobile/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="font-circle">
     <div class="top-0 w-full flex justify-between border-b-2 border-slate-200 fixed bg-teal-100">
-       <logo class="flex flex-row"><img class="h-12 mt-1" src="../assets/bgm.svg" alt=""><span class="hidden lg:block self-center text-bold text-2xl font-circleBold">BG Mobile</span></logo>
+       <logo class="flex flex-row"><img class="h-12 mt-1" src="../assets/bgm.svg" alt=""><span class="hidden lg:block self-center text-bold text-2xl font-circleBold">Mobile</span></logo>
        <snackbar class="flex flex-row justify-between gap-12">
             <a href="#calls" class="lg:gap-2 lg:before:content-['Calls'] lg:flex items-center content-center"><e class="content-center material-symbols-outlined">call</e></a>
             <a href="#dataplans" class="lg:gap-2 lg:before:content-['Data⠀Plans'] lg:flex items-center content-center"><e class="content-center material-symbols-outlined">network_cell</e></a>
