Some design changes

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
     <link rel="icon" type="image/x-icon" href="assets/Bucket Helper.svg">
     <title>Home - Xefili.dev</title>
 </head>
-<body class="dark:bg-[#2c2c2c]">
-    <pageHead class="fixed block h-12 w-full bg-[#30aec4a9] dark:bg-gradient-to-r from-blue-600 to-violet-600 backdrop-blur-lg z-20">
+<body class="dark:bg-[#2c2c2c] font-circle">
+    <pageHead class="fixed z-50 block h-12 w-full bg-[#202020] shadow-md shadow-[#202020] text-white">
         <leftDivision class="h-12 inline-grid grid-cols-[1fr 1fr] gap-2 justify-center items-center">
             <logo><img class="col-span-1 w-8 h-8 ml-2" src="assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
             <logoText class="col-start-2">
-                <span class="font-headerFont font-black">Xefili.dev</span>
+                <span class="font-circleBold font-black">Xefili.dev</span>
             </logoText>
         </leftDivision>
         <navBar class="flex float-right h-12 items-center justify-evenly">
             <a href="index.html">
-                <home class="flex items-center font-black mr-8 md:before:content-['Home⠀']"><span class="material-symbols-outlined">home</span></home>
+                <home class="flex items-center font-circleBold mr-8 md:before:content-['Home⠀']"><span class="material-symbols-outlined">home</span></home>
             </a>
             <a href="blog.html">
-                <blog class="flex items-center font-black mr-8 md:before:content-['Blog⠀']"><span class="material-symbols-outlined">chat</span></Blog>
+                <blog class="flex items-center font-circleBold mr-8 md:before:content-['Blog⠀']"><span class="material-symbols-outlined">chat</span></Blog>
             </a>
             <a href="https://xefili.dev/docs">
-                <docs class="flex items-center font-black mr-8 md:before:content-['Documentation⠀']"><span class="material-symbols-outlined">description</span></Docs>
+                <docs class="flex items-center font-circleBold mr-8 md:before:content-['Documentation⠀']"><span class="material-symbols-outlined">description</span></Docs>
             </a>
             <a href="tools.html">
-                <tools class="flex items-center font-black mr-8 md:before:content-['Tools⠀']"><span class="material-symbols-outlined">construction</span></search>
+                <tools class="flex items-center font-circleBold mr-8 md:before:content-['Tools⠀']"><span class="material-symbols-outlined">construction</span></search>
             </a>
         </navBar>
     </pageHead>
