--- a/blog.html
+++ b/blog.html
@@ -13,26 +13,26 @@
     <link rel="icon" type="image/x-icon" href="assets/Bucket Helper.svg">
     <title>Blog - Xefili.dev</title>
 </head>
-<body class="dark:bg-[#2c2c2c]">
-    <pageHead class="fixed block h-12 w-full bg-[#30aec4a9] dark:bg-gradient-to-r from-blue-600 to-violet-600 backdrop-blur-lg z-20">
+<body class="dark:bg-[#2c2c2c] font-circle">
+    <pageHead class="fixed z-50 block h-12 w-full bg-[#202020] shadow-md shadow-[#202020] text-white">
         <leftDivision class="h-12 inline-grid grid-cols-[1fr 1fr] gap-2 justify-center items-center">
             <logo><img class="col-span-1 w-8 h-8 ml-2" src="assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
             <logoText class="col-start-2">
-                <span class="font-headerFont font-black">Xefili.dev</span>
+                <span class="font-circleBold font-black">Xefili.dev</span>
             </logoText>
         </leftDivision>
         <navBar class="flex float-right h-12 items-center justify-evenly">
             <a href="index.html">
-                <home class="flex items-center font-black mr-8 md:before:content-['Home⠀']"><span class="material-symbols-outlined">home</span></home>
+                <home class="flex items-center font-circleBold mr-8 md:before:content-['Home⠀']"><span class="material-symbols-outlined">home</span></home>
             </a>
             <a href="blog.html">
-                <blog class="flex items-center font-black mr-8 md:before:content-['Blog⠀']"><span class="material-symbols-outlined">chat</span></Blog>
+                <blog class="flex items-center font-circleBold mr-8 md:before:content-['Blog⠀']"><span class="material-symbols-outlined">chat</span></Blog>
             </a>
             <a href="https://xefili.dev/docs">
-                <docs class="flex items-center font-black mr-8 md:before:content-['Documentation⠀']"><span class="material-symbols-outlined">description</span></Docs>
+                <docs class="flex items-center font-circleBold mr-8 md:before:content-['Documentation⠀']"><span class="material-symbols-outlined">description</span></Docs>
             </a>
             <a href="tools.html">
-                <tools class="flex items-center font-black mr-8 md:before:content-['Tools⠀']"><span class="material-symbols-outlined">construction</span></search>
+                <tools class="flex items-center font-circleBold mr-8 md:before:content-['Tools⠀']"><span class="material-symbols-outlined">construction</span></search>
             </a>
         </navBar>
     </pageHead>
@@ -41,7 +41,7 @@
             <h1 class="w-full text-center block">Welcome to the blog!</h1>
             <p class="w-full text-center block md:text-2xl">read up on the latest developments of this page.</p>
             <articles class="grid md:grid-cols-3 gap-4">
-                <a id="artLink1" class="border-slate-500 border-2 m-2 rounded-3xl">
+                <a id="artLink1" class="border-[#202020] border-2 bg-[] m-2 rounded-lg">
                     <art id="art1" class="p-2 w-[inherit]">
                         <div class="inline-block relative m-2 max-h-96">
                             <h3 id="artTitle1" class="w-full block">Lorem ipsum</h3>
@@ -50,7 +50,7 @@
                         </div>
                     </art>
                 </a>
-                <a id="artLink2" class="border-slate-500 border-2 m-2 rounded-3xl">
+                <a id="artLink2" class="border-[#202020] border-2 m-2 rounded-lg">
                     <art id="art2">
                         <div class="inline-block relative m-2 max-h-96">
                             <h3 id="artTitle2" class="w-full block">Lorem ipsum</h3>
@@ -59,7 +59,7 @@
                         </div>
                     </art>
                 </a>
-                <a id="artLink3" class="border-slate-500 border-2 m-2 rounded-3xl">
+                <a id="artLink3" class="border-[#202020] border-2 m-2 rounded-lg">
                     <art id="art3">
                         <div class="inline-block relative m-2 max-h-96">
                             <h3 id="artTitle3" class="w-full block">Lorem ipsum</h3>
@@ -68,7 +68,7 @@
                         </div>
                     </art>
                 </a>
-                <a id="artLink4" class="border-slate-500 border-2 m-2 rounded-3xl">
+                <a id="artLink4" class="border-[#202020] border-2 m-2 rounded-lg">
                     <art id="art4">
                         <div class="inline-block relative m-2 max-h-96">
                             <h3 id="artTitle4" class="w-full block">Lorem ipsum</h3>
