--- a/tools/index.html
+++ b/tools/index.html
@@ -14,85 +14,53 @@
     <link rel="icon" type="image/x-icon" href="assets/Bucket Helper.svg">
     <title>Home - Bucket Lounge</title>
 </head>
-<body class="dark:bg-[#2c2c2c]">
-    <pageHead class="fixed block h-12 w-full bg-[#30aec4a9] dark:bg-gradient-to-r from-blue-600 to-violet-600 backdrop-blur-lg z-20">
+<body class="dark:bg-[#2c2c2c] font-circle">
+    <pageHead class="fixed z-50 block h-12 w-full bg-[#202020] shadow-md shadow-[#202020] text-white">
         <leftDivision class="h-12 inline-grid grid-cols-[1fr 1fr] gap-2 justify-center items-center">
-            <logo><img class="col-span-1 w-8 h-8 ml-2" src="assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
+            <logo><img class="col-span-1 w-8 h-8 ml-2" src="../assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
             <logoText class="col-start-2">
-                <span class="font-headerFont font-black">Xefili.dev</span>
+                <span class="font-circleBold font-black">Xefili.dev</span>
             </logoText>
         </leftDivision>
         <navBar class="flex float-right h-12 items-center justify-evenly">
             <a href="index.html">
-                <home class="flex items-center font-black mr-8 md:before:content-['Home⠀']"><span class="material-symbols-outlined">home</span></home>
+                <home class="flex items-center font-circleBold mr-8 md:before:content-['Home⠀']"><span class="material-symbols-outlined">home</span></home>
             </a>
             <a href="blog.html">
-                <blog class="flex items-center font-black mr-8 md:before:content-['Blog⠀']"><span class="material-symbols-outlined">chat</span></Blog>
+                <blog class="flex items-center font-circleBold mr-8 md:before:content-['Blog⠀']"><span class="material-symbols-outlined">chat</span></Blog>
             </a>
             <a href="https://xefili.dev/docs">
-                <docs class="flex items-center font-black mr-8 md:before:content-['Documentation⠀']"><span class="material-symbols-outlined">description</span></Docs>
+                <docs class="flex items-center font-circleBold mr-8 md:before:content-['Documentation⠀']"><span class="material-symbols-outlined">description</span></Docs>
             </a>
             <a href="tools.html">
-                <tools class="flex items-center font-black mr-8 md:before:content-['Tools⠀']"><span class="material-symbols-outlined">construction</span></search>
+                <tools class="flex items-center font-circleBold mr-8 md:before:content-['Tools⠀']"><span class="material-symbols-outlined">construction</span></search>
             </a>
         </navBar>
     </pageHead>
     <!-- Please do not put site content in the <body> tags! Always put site content in <pageContent> tags.-->
-    <pageContent>
-        <carr class="dark:text-white">
-            <div class="carousel-view">
-                <left id="prev-btn" class="material-symbols-outlined">arrow_back</left>
-                    <div id="item-list" class="item-list">
-                        <div id="item" class="item">
-                            <img alt="" src="assets/vscode.svg"/>
-                            <textbox>
-                                <h1>Visual Studio Code</h1>
-                                <text>The main tool I personally use to develop this page.</text>
-                            </textbox>
-                        </div>
-                        <div id="item" class="item">
-                            <img alt="" src="assets/Cloudflare-logo-transparent-v-rgb_thumbnail.webp"/>
-                            <textbox>
-                                <h1>Cloudflare</h1>
-                                <text>Cloudflare Pages, DNS and Zero Trust are key elements of this webpage and it's services. Cloudflare Pages is used to host all the different pages. The api runs locally at home through a Cloudflare Tunnel and is managed remotely. Learn more about this on the <a href="https://xefili.dev/blog.html">Blog</a></text>
-                            </textbox>
-                        </div>
-                        <div id="item" class="item">
-                            <img alt="" src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"/>
-                            <textbox>
-                                <h1>Github</h1>
-                                <text>Github is used as a way to host the webpage's files in a way for everyone to see.</text>
-                            </textbox>
-                        </div>
-                        <div id="item" class="item">
-                            <img alt="" src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"/>
-                            <textbox>
-                                <h1>json-webserver</h1>
-                                <text>The tool behind the api. Learn more <a href="https://github.com/typicode/json-server">here</a></text>
-                            </textbox>
-                        </div>
-                    </div>
-                <right id="next-btn" class="material-symbols-outlined">arrow_forward</right>
-                </div>
-            </div>
-        </carr>
+    <pageContent class="flex justify-center">
+        <carroussel class="mt-24 snap-x snap-mandatory overflow-x-auto flex flex-row w-2/3 text-white">
+            <card class="lg:m-12 border-2 rounded-lg p-4 border-[#202020] m-4 min-h-24 min-w-[30rem] snap-center flex flex-col items-center">
+                <img class="max-h-48 min-h-48 max-w-48 min-w-48" src="../assets/vscode.svg" alt="">
+                <h1>Visual Studio Code</h1>
+                <p></p>
+            </card>
+            <card class="lg:m-12 border-2 rounded-lg p-4 border-[#202020] m-4 min-h-24 min-w-[30rem] snap-center flex flex-col items-center">
+                <img class="max-h-48 min-h-48 max-w-48 min-w-48" src="../assets/invertocat-white.svg" alt="">
+                <h1>Github</h1>
+                <p></p>
+            </card>
+            <card class="lg:m-12 border-2 rounded-lg p-4 border-[#202020] m-4 min-h-24 min-w-[30rem] snap-center flex flex-col items-center">
+                <img class="max-h-48 min-h-48 max-w-48 min-w-48" src="../assets/cflogo.webp" alt="">
+                <h1>Cloudflare & Pages</h1>
+                <p></p>
+            </card>
+            <card class="lg:m-12 border-2 rounded-lg p-4 border-[#202020] m-4 min-h-24 min-w-[30rem] snap-center flex flex-col items-center">
+                <img class="max-h-48 min-h-48 max-w-48 min-w-48" src="../assets/tailwind.svg" alt="">
+                <h1>Tailwind</h1>
+                <p></p>
+            </card>
+        </carroussel>
     </pageContent>
 </body>
-<script>
-const prev = document.getElementById('prev-btn')
-const next = document.getElementById('next-btn')
-const list = document.getElementById('item-list')
-
-function convertRemToPixels(rem) {    
-    return rem * parseFloat(getComputedStyle(document.documentElement).fontSize);
-}
-
-prev.addEventListener('click', () => {
-    list.scrollLeft -= convertRemToPixels(24)
-})
-
-next.addEventListener('click', () => {
-    list.scrollLeft += convertRemToPixels(24)
-})
-</script>
 </html>
