--- a/blog.html
+++ b/blog.html
@@ -8,13 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&family=Roboto+Flex:opsz,wdth,wght@8..144,112.5,400;8..144,112.5,700;8..144,112.5,900&display=swap" rel="stylesheet">
-    <link id="swap" rel="stylesheet" href="styles/style.css"/>
     <link id="swap" rel="stylesheet" href="styles/build.css">
     <link rel="icon" type="image/x-icon" href="assets/Bucket Helper.svg">
     <title>Blog - Xefili.dev</title>
 </head>
-<body class="dark:bg-[#2c2c2c] font-circle">
-    <pageHead class="fixed z-50 block h-12 w-full bg-[#202020] shadow-md shadow-[#202020] text-white">
+<body class="dark:bg-[#131313] font-circle">
+    <pageHead class="fixed z-50 block h-12 w-full shadow-md dark:text-white">
         <leftDivision class="h-12 inline-grid grid-cols-[1fr 1fr] gap-2 justify-center items-center">
             <logo><img class="col-span-1 w-8 h-8 ml-2" src="assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
             <logoText class="col-start-2">
@@ -22,11 +21,11 @@
             </logoText>
         </leftDivision>
         <navBar class="flex float-right h-12 items-center justify-evenly">
-            <a href="index.html">
-                <home class="flex items-center font-circleBold mr-8 md:before:content-['Home⠀']"><span class="material-symbols-outlined">home</span></home>
+            <a href="https://api.xefili.dev/v1/">
+                <home class="flex items-center font-circleBold mr-8 md:before:content-['API⠀']"><span class="material-symbols-outlined">api</span></home>
             </a>
-            <a href="blog.html">
-                <blog class="flex items-center font-circleBold mr-8 md:before:content-['Blog⠀']"><span class="material-symbols-outlined">chat</span></Blog>
+            <a href="https://xefili.dev/">
+                <blog class="flex items-center font-circleBold mr-8 md:before:content-['Home⠀']"><span class="material-symbols-outlined">home</span></Blog>
             </a>
             <a href="https://xefili.dev/docs">
                 <docs class="flex items-center font-circleBold mr-8 md:before:content-['Documentation⠀']"><span class="material-symbols-outlined">description</span></Docs>
@@ -36,54 +35,26 @@
             </a>
         </navBar>
     </pageHead>
-    <pageContent class=" z-10 mt-16 absolute dark:text-white w-full">
-        <div class="">
-            <h1 class="w-full text-center block">Welcome to the blog!</h1>
-            <p class="w-full text-center block md:text-2xl">read up on the latest developments of this page.</p>
-            <articles class="grid md:grid-cols-3 gap-4">
-                <a id="artLink1" class="border-[#202020] border-2 bg-[] m-2 rounded-lg">
-                    <art id="art1" class="p-2 w-[inherit]">
-                        <div class="inline-block relative m-2 max-h-96">
-                            <h3 id="artTitle1" class="w-full block">Lorem ipsum</h3>
-                            <text id="artText1">Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.</text>
-                            <blrr class="bg-gradient-to-b from-[#ffffff00] dark:from-[#2c2c2c00] to-[#ffffffff] dark:to-[#2c2c2cff] absolute h-12 w-full left-0 bottom-0"></blrr>
-                        </div>
-                    </art>
-                </a>
-                <a id="artLink2" class="border-[#202020] border-2 m-2 rounded-lg">
-                    <art id="art2">
-                        <div class="inline-block relative m-2 max-h-96">
-                            <h3 id="artTitle2" class="w-full block">Lorem ipsum</h3>
-                            <text id="artText2">Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.</text>
-                            <blrr class="bg-gradient-to-b from-[#ffffff00] dark:from-[#2c2c2c00] to-[#ffffffff] dark:to-[#2c2c2cff] absolute h-12 w-full left-0 bottom-0"></blrr>
-                        </div>
-                    </art>
-                </a>
-                <a id="artLink3" class="border-[#202020] border-2 m-2 rounded-lg">
-                    <art id="art3">
-                        <div class="inline-block relative m-2 max-h-96">
-                            <h3 id="artTitle3" class="w-full block">Lorem ipsum</h3>
-                            <text id="artText3">Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.</text>
-                            <blrr class="bg-gradient-to-b from-[#ffffff00] dark:from-[#2c2c2c00] to-[#ffffffff] dark:to-[#2c2c2cff] absolute h-12 w-full left-0 bottom-0"></blrr>
-                        </div>
-                    </art>
-                </a>
-                <a id="artLink4" class="border-[#202020] border-2 m-2 rounded-lg">
-                    <art id="art4">
-                        <div class="inline-block relative m-2 max-h-96">
-                            <h3 id="artTitle4" class="w-full block">Lorem ipsum</h3>
-                            <text id="artText4">Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.</text>
-                            <blrr class="bg-gradient-to-b from-[#ffffff00] dark:from-[#2c2c2c00] to-[#ffffffff] dark:to-[#2c2c2cff] absolute h-12 w-full left-0 bottom-0"></blrr>
-                        </div>
-                    </art>
-                </a>
-            </articles>
+    <!-- Please do not put site content in the <body> tags! Always put site content in <pageContent> tags.-->
+    <pageContent class="grid grid-cols-1 absolute mt-16 w-full justify-items-center p-4">
+        <div class="mb-4">
+            <h1 class="bg-clip-text bg-gradient-to-br from-emerald-500 to-cyan-600 text-transparent text-left">Blog</h1>
+            <h2 class="text-gray-600">Read up on the latest news:</h2>
         </div>
-        <p>Looking for a different article? Visit the archive <a class="underline-offset-4 underline" id="a" href="/blog/displayArticle.html">here</a></p> <!-- this id is stupid but works :) -->
+        <div class="flex flex-row text-center items-center w-full justify-center gap-8 p-2 min-h-36 bg-red-400/50">
+            <e class="material-symbols-outlined font-black bg-red-500/75 bg-clip-text text-transparent !text-6xl">block</e>
+            <div class="dark:text-white">
+                <h1 class="no-underline text-3xl">Blog unavailable..</h1>
+                <p>Due to time constraints, the blog webpage will be down. To read past articles, head to <a class="underline underline-offset-4" href="https://xefili.dev/blog/displayArticle.html">the archive</a>. The api may also be queried for blog posts under the <code>/articles</code> endpoint.</p>
+            </div>
+        </div>
     </pageContent>
-    <script src="script.js" type="module"></script>
-    <script>
-        console.info("Like snooping around here? Check out the source code @ https://github.com/xefili/xefili.dev ;)");
-    </script>
+    <div class="flex justify-center w-full bottom-0 mb-2 absolute">
+        <div class="dark:text-white flex lg:w-4/5 w-full justify-evenly">
+            <a href="">Contact</a>
+            <a href="">Feedback</a>
+            <a href="">Legal</a>
+        </div>
+    </div>
 </body>
 </html>
